@@ -39,6 +39,10 @@ graphics window.
   the points and lines is subject to clipping, but locations outside the
   current clipping rectangle will be returned.
 
+  On most devices which support \code{locator}, successful selection of
+  a point is indicated by a bell sound unless
+  \code{\link{options}(locatorBell=FALSE}} has been set.
+
   If the window is resized or hidden and then exposed before the input 
   process has terminated, any lines or points drawn by \code{locator}
   will disappear.  These will reappear once the input process has 
